又搞了一下前端

--- a/bilive-danmu-fe/index.html
+++ b/bilive-danmu-fe/index.html
@@ -30,6 +30,6 @@
       }
     </script>
     <script src="https://unpkg.com/mdui@1.0.2/dist/js/mdui.min.js"></script>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="src/main.js"></script>
   </body>
 </html>
