完成直播实时前端

--- a/bilive-danmu-fe/hud/index.html
+++ b/bilive-danmu-fe/hud/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://unpkg.com/mdui@1.0.2/dist/css/mdui.min.css" />
     <title>弹幕播放器</title>
   </head>
-  <body class="mdui-theme-primary-blue mdui-theme-accent-blue">
+  <body class="mdui-theme-primary-blue mdui-theme-accent-blue" style="height: 100vh; background-color: #303030;">
     <div id="app">
       <router-view></router-view>
     </div>
