--- a/bilive-danmu-fe/index.html
+++ b/bilive-danmu-fe/index.html
@@ -31,6 +31,7 @@
     </script>
     <script src="https://unpkg.com/mdui@1.0.2/dist/js/mdui.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/echarts@5.3.3/dist/echarts.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/wordcloud@1.2.2/src/wordcloud2.min.js"></script>
     <script type="module" src="src/main.js"></script>
   </body>
 </html>
